// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseVersionByNpmPackageArg typescript 1`] = `
{
  "name": "typescript",
  "version": "*",
}
`;

exports[`parseVersionByNpmPackageArg typescript@>= 1 & < 2 1`] = `
{
  "name": "typescript",
  "version": ">= 1 & < 2",
}
`;

exports[`parseVersionByNpmPackageArg typescript@1 1`] = `
{
  "name": "typescript",
  "version": "1",
}
`;
